# virting-ublk-drbd-demo

./: AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  protocol.md  testing.md  ublk-adapter.md
src/: backend.rs  bitmap.rs  cli.rs  client.rs  lib.rs  main.rs  protocol.rs  server.rs
tests/: replication.rs
